--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>sellfood</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><link rel=stylesheet type=text/css href=static/css/reset.css><link href=./static/css/app.86283d000a017249ff6caad77d033ebb.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.b9d56defb825ee77426c.js></script><script type=text/javascript src=./static/js/vendor.8d873da30e4aefc9bbc8.js></script><script type=text/javascript src=./static/js/app.d8f91aca2b1b6f6b2fe6.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>sellfood</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="static/css/reset.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
